src/test/ui/associated-const/associated-const-type-parameter-arrays.stderr
error[E0747]: type parameters cannot appear within an array length expression
  --> $DIR/associated-const-type-parameter-arrays.rs:16:24
   |
LL |     let _array: [u32; <A as Foo>::Y];
   |                        ^ type parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0747`.
